textlist first style round

--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,17 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
+  height: 100vh;
+  font-family: 'Roboto Condensed', sans-serif;
+  color: #333;
+  background: linear-gradient(
+    75deg,
+/*     rgba(227, 178, 97, 1) 0%,
+    rgba(227, 178, 97, 1) 50%, */
+    rgba(252, 239, 208, 1) 0%,
+    rgba(252, 239, 208, 1) 50%,
+    rgba(73, 209, 249, 1) 50%,
+    rgba(73, 209, 249, 1) 100%
+  );
 }
