text and rate display

--- a/src/TextList.css
+++ b/src/TextList.css
@@ -39,6 +39,6 @@
   background: white;
   align-self: center;
   width: 70%;
-  /* overflow: scroll; */
+  overflow: scroll;
   box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.1);
 }
