--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,17 @@
   font-family: 'Roboto Condensed', sans-serif;
   color: #333;
   background: linear-gradient(
-    75deg,
+    90deg,
 /*     rgba(227, 178, 97, 1) 0%,
     rgba(227, 178, 97, 1) 50%, */
-    rgba(252, 239, 208, 1) 0%,
+/*     rgba(252, 239, 208, 1) 0%,
     rgba(252, 239, 208, 1) 50%,
     rgba(73, 209, 249, 1) 50%,
-    rgba(73, 209, 249, 1) 100%
+    rgba(73, 209, 249, 1) 100% */
+    rgba(229, 106, 119, 1) 0%,
+    rgba(229, 106, 119, 1) 50%,
+    rgba(237, 201, 81, 1) 50%,
+    rgba(237, 201, 81, 1) 100%
   );
 }
+
